...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <EditText
                android:id="@+id/settings_input_username"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_marginTop="8sp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/rounded_corners"
...
                android:padding="5.5sp"
                android:singleLine="true"
                android:text="Input Field"
                android:textColor="#353236"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_username"
                app:layout_constraintWidth_percent="0.35" />

            <ImageView
                android:id="@+id/username_tick"
                android:layout_width="35sp"
                android:layout_height="35sp"
...
                app:layout_constraintTop_toBottomOf="@+id/profile_username"
                app:srcCompat="@drawable/ic_clear_black_24dp"
                tools:ignore="PrivateResource"
                android:visibility="gone"/>

            <Button
                android:id="@+id/settings_reset_password"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="40sp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10sp"
                android:background="@color/colorPrimaryText"
                android:onClick="changePassword"
                android:text="change password"
                android:textColor="#C8FFFFFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_save_settings"
                app:layout_constraintWidth_percent="0.4" />

            <Button
                android:id="@+id/settings_delete_profile"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="40sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="16sp"
                android:layout_marginBottom="20sp"
...
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/settings_privacy"
                android:layout_width="170dp"
                android:layout_height="23dp"
                android:layout_marginStart="16sp"
                android:layout_marginTop="15dp"
                android:text="Profile Visibility"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_progress_text" />

            <EditText
                android:id="@+id/settings_input_about_me"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="16sp"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_visibility_tab_bar">

                <TableRow android:padding="1sp">

                    <Switch
                        android:id="@+id/settings_privacy_about_me"
                        android:layout_width="match_parent"
                        android:layout_margin="4sp"
                        android:layout_weight="1"
                        android:background="#1788898E"
                        android:checked="false"
                        android:onClick="onSwitchClicked"
...
                        tools:checked="true" />
                </TableRow>

                <TableRow>

                    <Switch
                        android:id="@+id/settings_privacy_profile_image"
                        android:layout_margin="4sp"
                        android:layout_weight="1"
                        android:background="#1788898E"
                        android:checked="false"
                        android:onClick="onSwitchClicked"
                        android:padding="6sp"
                        android:text="Profile Image"
                        android:textSize="13sp"
                        tools:checked="false" />

                    <Switch
                        android:id="@+id/settings_privacy_filters"
                        android:layout_margin="4sp"
                        android:layout_weight="1"
                        android:background="#1788898E"
                        android:checked="false"
                        android:onClick="onSwitchClicked"
                        android:padding="6sp"
...
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                app:tabTextColor="#ffffff"
                android:background="@color/colorPrimary"
                app:layout_constraintBottom_toTopOf="@+id/settings_privacy_table"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/settings_private_toggle"
                app:tabIndicatorHeight="4sp">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Public" />
...
