...
            <CheckBox
                android:id="@+id/allergy_wheat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onCheckboxClicked"
                android:text="Wheat"
                android:textSize="13sp"
                tools:ignore="OnClick"/>

            <CheckBox
                android:id="@+id/allergy_eggs"
                android:layout_width="wrap_content"
...
